[package]
name = "meteor"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
clap = { version = "4.5.4", features = ["derive"] }
hcl-rs = "0.16.9"
indicatif = { version = "0.17.8", features = ["tokio"] }
semver = { version = "1.0.22", features = ["serde"] }
serde = { version = "1.0.198", features = ["derive"] }
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
